// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNavHamburgerButton renders per snapshot 1`] = `
<LeftNavHamburgerButton
  ariaLabel="Assessment - all tests and requirements list"
  deps={
    Object {
      "detailsViewActionMessageCreator": null,
    }
  }
  isSideNavOpen={false}
  setSideNavOpen={null}
/>
`;

exports[`FastPassLeftNavHamburgerButton renders per snapshot 1`] = `
<LeftNavHamburgerButton
  ariaLabel="FastPass - all tests list"
  deps={
    Object {
      "detailsViewActionMessageCreator": null,
    }
  }
  isSideNavOpen={false}
  setSideNavOpen={null}
/>
`;
